tests/ui/unexpected_comma.stderr
error: expected expression, found `,`
  --> $DIR/unexpected_comma.rs:13:17
   |
13 |     json!({ "a" , "b": true });
   |                 ^

